# stove

./: .editorconfig  .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
stove/: __init__.py  addr.py  cli.py  router.py  stove.py  utils.py
tests/: test_utils.py
